Apps/deploy/docker_k8s/helm-chart/test.yaml
# Source: helm-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  labels:
    app: fastapi
spec:
  selector:
    app: fastapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
---
# Source: helm-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  labels:
    app: streamlit
spec:
  selector:
    app: streamlit
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8051
  type: LoadBalancer
  externalTrafficPolicy: Cluster
---
# Source: helm-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: "doantronghieu/llm-fastapi:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 3
            memory: 8Gi
          requests:
            cpu: 1
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
---
# Source: helm-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  labels:
    app: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: "doantronghieu/llm-streamlit:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8051
        resources:
          limits:
            cpu: 1
            memory: 8Gi
          requests:
            cpu: 1
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /
            port: 8051
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8051
          initialDelaySeconds: 15
          periodSeconds: 20
---
# Source: helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /${2}
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - my-domain.com
    secretName: my-domain-tls
  rules:
  - host: my-domain.com
    http:
      paths:
      - path: /fastapi(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 80
      - path: /streamlit(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: streamlit
            port:
              number: 80
